2003-03-30  Sam Steingold  <sds@gnu.org>

	* regexp.lisp (cflags, eflags): new macros
	(cflags-max): new constant
	(regexp-compile): accept extended/case-sensitive/newline/nosub/cflags
	&key arguments instead of an &optional argument case-sensitive;
	added a compiler macro to pre-compute cflags when possible
	(regexp-exec): accept notbol/noteol/eflags &key arguments
	added a compiler macro to pre-compute eflags when possible
	(optimize-flags): new function, pre-compute cflags & eflags for
	compiler macros for the following functions:
	(match-once, %match, regexp-split): accept both notbol/noteol/eflags
	and extended/case-sensitive/newline/nosub/cflags &key arguments;
	added compiler macros to pre-compute cflags & eflags when possible
	(with-loop-split): accept both notbol/noteol/eflags and
	extended/case-sensitive/newline/nosub/cflags &key arguments
	(regexp-quote): accept an &optional extended argument
	Suggested by Pascal Bourguignon <pjb@informatimago.com>

2003-03-29  Sam Steingold  <sds@gnu.org>

	solidified updating back_trace callers
	* spvw.d (for_all_back_traces): new macro
	* spvw_update.d (update_back_traces): new macro
	* spvw_garcol.d, spvw_memfile.d: use it for all updating

2003-03-29  Sam Steingold  <sds@gnu.org>

	* condition.lisp (restart-case, with-restarts): macroexpand
	`restartable-form' to associate the restarts with this condition

2003-03-28  Sam Steingold  <sds@gnu.org>

	do not print system structure definitions
	do print full prototype for built-in functions
	* foreign.d (C_STRUCT_SLOTS): define to 3
	* foreign1.lisp (parse-components, c-struct-constructor): C-STRUCT
	now has options, so slots start at CDDDR
	(parse-c-type): init name and options for C-STRUCT
	(deparse-c-type): extract name and options for C-STRUCT
	(to-c-typedecl): structures may be :EXTERNAL and :TYPEDEF
	(finalize-coutput-file): print full prototype for :BUILT-IN functions
	(def-call-out): recognize :BUILT-IN keyword
	(note-c-fun): save :BUILT-IN status