@@ -205,6 +205,7 @@ int main (int argc, char* argv[])
           case 'w':
           case 'n': /* -norc */
           case 'r': /* -repl */
+          case 'v': /* -verbose */
           case '-':
             break;
           /* Skippable options with arguments. */
